--- a/angular.json
+++ b/angular.json
@@ -30,10 +30,15 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
-            "assets": [
+            "assets":  [
               {
-                "glob": "**/*",
+                "glob": "*/",
                 "input": "public"
+              },
+              {
+                "glob": "*/",
+                "input": "src/assets",
+                "output": "assets"
               }
             ],
             "styles": [
